--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,3 +9,12 @@
   border-radius: 8px;
 }
 
+.xs{
+  background-color: white;
+ // border-radius: 8px;
+}
+.ct{
+  padding: 10px;
+  height: 75vh;
+}
+
