--- a/src/app/ajouter-geste/ajouter-geste.component.html
+++ b/src/app/ajouter-geste/ajouter-geste.component.html
@@ -1,1 +1,57 @@
-<p>ajouter-geste works!</p>
+<div class="Container xs justify-content-center">
+
+  <div class="row mx-auto">
+    <div class="col xs  forme mt-4">
+
+      <div class="row">
+
+        <div class="col-md-7 py-5 left">
+
+          <div class="row">
+            <div class="form-floating col-9 mx-4 mb-4">
+              <input type="text" class="form-control" id="floatingPassword" placeholder="le nom">
+              <label for="floatingPassword">Nom du geste</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-floating col-9 mx-4 mb-4">
+              <textarea type="text" class="form-control" id="floatingPassword" placeholder="la description"></textarea>
+              <label for="floatingPassword">Description</label>
+            </div>
+          </div>
+
+          <div class="row ">
+            <div class=" col-9 mx-4 mb-4">
+              <input class="form-control form-control-sm" id="formFileSm" accept="image/png, image/jpeg" type="file" name="img" formControlName="img">
+            </div>
+          </div>
+
+          <div class="row ">
+            <div class=" col-9 mx-4 mb-4">
+              <input class="form-control form-control-sm" id="formFileSm" accept="image/png, image/jpeg" type="file" name="img" formControlName="img">
+            </div>
+          </div>
+
+
+
+
+          <button class="mx-auto d-block text-center">Ajouter</button>
+
+        </div>
+        <!-- partie droite -->
+        <div class="col-md-5 right">
+
+          <div class="">
+            <h2 class="mt-4">Ajouter un geste de secours</h2>
+          </div>
+
+
+          <div class="auth text-center">
+            <img src="/../assets/coeur.gif" alt="gif">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
