--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,46 @@
-<p>login works!</p>
+<div class="Container xs justify-content-center">
+
+  <div class="row align-self-center">
+    <div class="col-8 xs mx-auto d-block forme">
+
+      <div class="row">
+
+        <div class="col-md-7 py-5 left">
+
+          <div class="row">
+            <div class="col mb-3 text-center">
+              <p>Authentification</p>
+            </div>
+            <div class=" col-10 form-floating mx-auto mb-4">
+              <input type="text" class="form-control" id="floatingPassword" placeholder="votre nom d'utilisateur">
+              <label for="floatingPassword">Username</label>
+            </div>
+          </div>
+
+
+          <div class="row">
+            <div class="form-floating col-10 mx-auto mb-4">
+              <input type="password" class="form-control" id="floatingPassword" placeholder="votre mot de passe">
+              <label for="floatingPassword">Mot de passe</label>
+            </div>
+          </div>
+
+          <button class="mx-auto d-block text-center">Connexion</button>
+
+        </div>
+        <!-- partie droite -->
+        <div class="col-md-5 right">
+          <!-- <div class="msg mt-5">
+            Bienvenu sur la plateforme
+          </div> -->
+          <h2 class="">Bienvenu sur la plateforme</h2>
+
+          <div class="auth text-center">
+            <img src="/../assets/authen.gif" alt="gif">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
