--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -2,8 +2,9 @@
   background-color: white;
   border-radius: 20px;
   box-shadow: -2px 1px 7px #648ED4;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin-top: 8%;
+  box-sizing: content-box;
+
 }
 .right{
   background-color: #648ED4;
@@ -40,11 +41,11 @@ button
   font-size: 20px;
   width: 150px;
 }
-button:hover{
-  border: 2px solid #0054E0;
+.button:hover{
+  border: 1px solid #0054E0;
   background-color: white;
   color: black;
-  font-weight: bold;
+  transform: none;
 }
 
 h2{
