--- a/src/app/entite/entite.component.html
+++ b/src/app/entite/entite.component.html
@@ -36,7 +36,7 @@
                  <h2>Listes des Entités</h2>
               </div>
               <div class="col-md-4 text-center ">
-                  <button class="btn btn-outline-primary mx-5">Ajouter une Entite</button>
+                  <button class="btn mx-5" routerLink="/sidebar/ajouter_entite">Ajouter une Entite</button>
               </div>
           </div>
           <table class="table mx-auto text-center">
