--- a/src/app/ajouter-geste/ajouter-geste.component.html
+++ b/src/app/ajouter-geste/ajouter-geste.component.html
@@ -7,30 +7,54 @@
 
         <div class="col-md-7 py-5 left">
 
-          <div class="row">
-            <div class="form-floating col-9 mx-4 mb-4">
-              <input type="text" class="form-control" id="floatingPassword" placeholder="le nom">
-              <label for="floatingPassword">Nom du geste</label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="form-floating col-9 mx-4 mb-4">
-              <textarea type="text" class="form-control" id="floatingPassword" placeholder="la description"></textarea>
-              <label for="floatingPassword">Description</label>
-            </div>
-          </div>
+          <form name="form" (ngSubmit)="f.form.valid && onSubmit()"
+            #f="ngForm"
+            novalidate>
 
-          <div class="row ">
-            <div class=" col-9 mx-4 mb-4">
-              <input class="form-control form-control-sm" id="formFileSm" accept="image/png, image/jpeg" type="file" name="img" formControlName="img">
-            </div>
-          </div>
 
-          <div class="row ">
-            <div class=" col-9 mx-4 mb-4">
-              <input class="form-control form-control-sm" id="formFileSm" accept="image/png, image/jpeg" type="file" name="img" formControlName="img">
+            <div class="row">
+              <div class="form-floating col-9 mx-4 mb-4">
+                <input type="text" class="form-control" id="floatingPassword" placeholder="desc"
+                name="nom"
+                [(ngModel)]="ajoutGeste.nom"
+                required
+                #nom="ngModel"
+                [ngClass]="{ 'is-invalid': f.submitted && nom.errors }">
+               <div *ngIf="nom.errors && f.submitted" class="invalid-feedback">
+                 Le nom de geste est obligatoire !
+               </div>
+                <label for="floatingPassword">Nom du geste</label>
+              </div>
             </div>
-          </div>
+
+            <div class="row">
+              <div class="form-floating col-9 mx-4 mb-4">
+                <textarea type="text" class="form-control" id="floatingPassword" placeholder="la description"
+                name="description"
+                [(ngModel)]="ajoutGeste.description"
+                required
+                #description="ngModel"
+                [ngClass]="{ 'is-invalid': f.submitted && description.errors }">
+
+               <div *ngIf="description.errors && f.submitted" class="invalid-feedback">
+                 La description de geste est obligatoire !
+               </div></textarea>
+                <label for="floatingPassword">Description</label>
+              </div>
+            </div>
+
+            <div class="row ">
+              <div class=" col-9 mx-4 mb-4">
+                <input class="form-control form-control-sm" id="formFileSm" accept="image/png, image/jpeg" type="file" name="img1" formControlName="img1" (change)="filechange($event)">
+              </div>
+            </div>
+
+            <div class="row ">
+              <div class=" col-9 mx-4 mb-4">
+                <input class="form-control form-control-sm" id="formFileSm" accept="image/png, image/jpeg" type="file" name="img2" formControlName="img2" (change)="filechange1($event)">
+              </div>
+            </div>
+          </form>
 
 
 
