--- a/src/app/entite/entite.component.scss
+++ b/src/app/entite/entite.component.scss
@@ -30,6 +30,10 @@ border-radius: 5px;
 }
 button{
 background: none;
-border: 1px solid #f58f29!important;
+border: 1px solid #4464ad!important;
 color: black!important;
+}
+button:hover{
+  background-color: #4464ad;
+  border: 1px solid white;
 }
