--- a/src/app/ajouter-responsable/ajouter-responsable.component.html
+++ b/src/app/ajouter-responsable/ajouter-responsable.component.html
@@ -6,7 +6,7 @@
       <div class="boite justify-content-center">
       </div>
 
-      <p class="col">Ajouter une entité</p>
+      <p class="col">Ajouter un responsable</p>
 
 
       <div class="col">
