--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -25,13 +25,10 @@
                   <div class="col-md-3" >
                     <button class="btn" *ngIf="showSuperAdminBoard" routerLink="/sidebar/ajouter_responsable">Ajouter responsable</button>
                   </div>
-                  <div class="col-md-1">
-                    <button class="btn" routerLink="/sidebar/ajouter_responsabl">filtre</button>
-                  </div>
-                  <div class="col-md-4 ">
+                  <div class="col-md-4 offset-md-1 ">
                       <form class="d-flex text-end mb-2">
                           <input type="search" class="form-control sh mx-auto" placeholder="Recherchez une dette">
-                          <button class="btn" type="submit">Rechercher</button>
+                          <button  type="submit">Rechercher</button>
                         </form>
                   </div>
               </div>
@@ -43,7 +40,7 @@
                   <th scope="col">Numero</th>
                   <th scope="col">Adresse</th>
                   <th scope="col">Role</th>
-                  <th scope="col" style="border-radius: 0 10px 0 0 ;">Action
+                  <th scope="col" style="border-radius: 0 10px 0 0 ;" *ngIf="showSuperAdminBoard">Action
                 </tr>
               </thead>
               <tbody>
@@ -53,7 +50,7 @@
                   <td>{{liste.numero}}</td>
                   <td> {{liste.adresse}}</td>
                   <td>{{liste.roles[0].name}}</td>
-                  <td><a routerLink="['', 'liste.id']"><i class="bi bi-pencil-square mx-auto"></i></a>  <a routerLink="['', 'liste.id']" ><i class="bi bi-trash3 mx-2"></i></a></td>
+                  <td *ngIf="showSuperAdminBoard"><a type="submit" (click)="supprimer(liste.id)"><i class="bi bi-trash3 mx-2" style="color: red;"></i></a></td>
                 </tr>
               </tbody>
               </table>
