--- a/src/app/entite/entite.component.html
+++ b/src/app/entite/entite.component.html
@@ -54,7 +54,7 @@
               <th scope="row">{{liste.nom}}</th>
               <td>{{liste.numero}}</td>
               <td>{{eliste[i].user.username}}</td>
-              <td><a routerLink="['', 'liste.id']"><i class="bi bi-pencil-square mx-auto"></i></a>  <a routerLink="['', 'liste.id']" ><i class="bi bi-trash3 mx-2"></i></a></td>
+              <td><a routerLink="['', 'liste.id']"><i class="bi bi-pencil-square mx-auto"></i></a>  <a type="submit" (click)="supprimer(liste.id)" ><i class="bi bi-trash3 mx-2" style="color: red;"></i></a></td>
             </tr>
           </tbody>
           </table>
