--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,8 +3,7 @@
       <div id="sidebar" class="col-auto sidebar  collapse collapse-horizontal show"
           style="height: 100vh;" >
 
-          <div class="col bg-warning py-5 mt-5 mb-2">
-            {{username}}
+          <div class="col lgo py-5 mt-5 mb-2 mx-5">
           </div>
 
           <div class="li mt-5 mb-5">
@@ -18,7 +17,7 @@
             </div>
 
             <div class="nav-item mb-2">
-              <a class="nav-link" routerLink="/sidebar/ajouter_geste" [routerLinkActive]="'active'">Gestes</a>
+              <a class="nav-link" routerLink="/sidebar/ajouter_geste" [routerLinkActive]="'active'">Gestes de secours</a>
             </div>
 
             <div class="nav-item mb-5">
