--- a/src/app/ajouter-entite/ajouter-entite.component.html
+++ b/src/app/ajouter-entite/ajouter-entite.component.html
@@ -3,13 +3,14 @@
   <div class="container-fluid mt-4 ct">
 
     <div class="forme mx-auto d-block">
-      <div class="boite justify-content-center">
-      </div>
+      <!-- <div class="boite justify-content-center">
+      </div> -->
 
-      <p class="col">Ajouter une entité</p>
+
 
       <div class="col">
         <div class="form">
+          <p class="col">Ajouter une entité</p>
           <div class="form-floating mb-3">
             <input type="text" class="form-control" id="floatingInput" [(ngModel)]="nom" name="nom">
             <label for="floatingInput">Nom</label>
@@ -21,13 +22,25 @@
           </div>
 
           <div class="row mb-2">
-            <div class="mb-3">
+            <div class="col-md-3">
+              <label for="floatingInput" style="font-weight: bold; font-size: 20px;">Image</label>
+            </div>
+            <div class="col-md-9 mb-3">
               <input class="form-control form-control-sm" id="formFileSm" accept="image/png, image/jpeg" type="file" name="img" formControlName="img" (change)="filechange($event)">
             </div>
           </div>
 
+          <div class="row mb-2">
+            <div class="col-md-3">
+              <label for="floatingInput" style="font-weight: bold; font-size: 20px;">Audio</label>
+            </div>
+            <div class="col-md-9 mb-3">
+              <input class="form-control form-control-sm" id="formFileSm"  type="file" name="audio" formControlName="audio" (change)="filechange1($event)">
+            </div>
+          </div>
+
           <div class="row mb-3">
-            <div class="col">
+            <div class="col hj">
               <select class="form-select" aria-label="select example" [(ngModel)]="id" name="id">
                 <option selected>--Choisir responsable--</option>
                 <option *ngFor="let liste of uliste" value="{{liste.id}}">{{liste.username}}</option>
