--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -129,3 +129,10 @@ span{
   border-radius: 5px;
   background-color: #EB8024;
 }
+
+.lgo{
+  background-image: url("/../assets/lg.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  border-radius: 8px;
+}
