liste des signales

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -20,6 +20,10 @@
               <a class="nav-link" routerLink="/sidebar/ajouter_geste" [routerLinkActive]="'active'">Gestes de secours</a>
             </div>
 
+            <div class="nav-item mb-2">
+              <a class="nav-link" routerLink="/sidebar/signale" [routerLinkActive]="'active'">Signale de danger</a>
+            </div>
+
             <div class="nav-item mb-5">
               <a class="nav-link" href="/" [routerLinkActive]="'active'">Utilisateur</a>
             </div>
@@ -109,8 +113,6 @@
     </div>
   </div>
 </div>
-
-
 
 
 <!-- la notif -->
